middleware with jwt token
