# controller/user.go
@@ -6,6 +6,7 @@ import (
 	"time"
 
 	"github.com/gin-gonic/gin"
+		"github.com/golang-jwt/jwt"
 	"github.com/google/uuid"
 	"github.com/vishal2911/management/model"
 	"github.com/vishal2911/management/util"
@@ -139,4 +140,90 @@ func (server *Server) DeleteUser(c *gin.Context) error {
 		"successfully deleted user record ", nil)
 	return nil
 
+}
+
+
+// Signup API handler
+func (server *Server) SignUp(c *gin.Context) {
+	var user model.User
+
+	util.Log(model.LogLevelInfo, model.ControllerPackage, model.SignUP,
+		"unmarshaling user data", nil)
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	user.ID = uuid.New()
+	user.CreatedAt = time.Now().UTC()
+	err := server.PostgressDb.SignUp(&user)
+	if err != nil {
+		util.Log(model.LogLevelError, model.ControllerPackage, model.SignUP,
+			"error in saving user record", user)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to SignUp User"})
+		return
+	}
+
+	// Create a new token
+	token := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
+		model.Email:    user.Email,
+		model.Password: user.Password,
+		model.UserID:   user.ID,
+		model.Expire:   time.Now().Add(model.TokenExpiration).Unix(), // Token expiration time
+		// Additional data can be added here
+	})
+
+	// Sign the token with the secret key
+	tokenString, err := token.SignedString(model.SecretKey)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to generate token"})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"token": tokenString})
+}
+
+
+
+// SignIn API handler
+func (server *Server) SignIn(c *gin.Context) {
+	var user model.UserSignIn
+	err := c.ShouldBindJSON(&user)
+	if err != nil {
+		util.Log(model.LogLevelError, model.ControllerPackage, model.CreateUser,
+			"error while unmarshaling payload", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get user Data from payload"})
+		return
+	}
+
+	userResp, err := server.PostgressDb.SingIn(user)
+	if err != nil {
+		util.Log(model.LogLevelError, model.ControllerPackage, model.SignIn,
+			"error in getting user data from pgress for emailId", user.Email)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to get user Data for given user"})
+		return
+	}
+	if userResp.Email != user.Email || userResp.Password != user.Password {
+		util.Log(model.LogLevelInfo, model.ControllerPackage, model.SignIn,
+			"user data not matched , database response", userResp)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to validate user data"})
+		return
+	}
+
+	// Create a new token
+	newtoken := jwt.NewWithClaims(jwt.SigningMethodHS256, jwt.MapClaims{
+		model.Email:    user.Email,
+		model.Password: user.Password,
+		model.UserID:   userResp.ID,
+		model.Expire:   time.Now().Add(model.TokenExpiration).Unix(), // Token expiration time
+		// Additional data can be added here
+	})
+
+	// Sign the newtoken with the secret key
+	tokenString, err := newtoken.SignedString(model.SecretKey)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to generate token"})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"token": tokenString})
 }
